# ansible

./: .gitignore  .gitlab-ci.yml  ansible.cfg  hosts  pyproject.toml  readme.md  requirements.yaml
files/k3s/: argocd.yaml.j2  cilium.yaml.j2  root.yaml.j2  traefik.yaml.j2
group_vars/: all.yaml  all.yml  ceph.yaml  consul_agent  consul_client  consul_server  k3s  k3s.yaml
host_vars/: ceph-1.blotzheim.infra.mout.ch  ceph-1.blotzheim.infra.mout.ch.yaml  ceph-1.hirsingue.infra.mout.ch  ceph-2.blotzheim.infra.mout.ch  ceph-2.blotzheim.infra.mout.ch.yaml  ceph-2.hirsingue.infra.mout.ch  ceph-3.blotzheim.infra.mout.ch  ceph-3.hirsingue.infra.mout.ch  compute-1.hirsingue.infra.mout.ch  compute-2.blotzheim.infra.mout.ch  compute-2.blotzheim.infra.mout.ch.yaml  gate-1.blotzheim.infra.mout.ch  gate-1.blotzheim.infra.mout.ch.yaml  gate-1.hirsingue.infra.mout.ch  gate-1.hirsingue.infra.mout.ch.yaml  gate-1.ovh.infra.mout.ch.yaml  gate-2.blotzheim.infra.mout.ch  hv-1.blotzheim.infra.mout.ch  hv-1.blotzheim.infra.mout.ch.yaml  hv-1.hirsingue.infra.mout.ch  theater-1.magstatt.infra.mout.ch.yaml  under-1.infra.mout.ch
playbooks/: iptables.yaml  main.yaml  vyos.yaml
roles/common/task/: main.yml
roles/common/tasks/: main.yml
roles/dns/handlers/: main.yaml
roles/dns/tasks/: main.yaml
roles/vyos/firewall/templates/vyos/: firewall.j2
roles/vyos/firewall/templates/vyos/include/: firewall_rules.j2  (+1 more)
roles/vyos/load_balancing/tasks/: main.yml
roles/vyos/load_balancing/templates/vyos/: load_balancing.j2
roles/vyos/system/templates/vyos/: system.j2
vars/: ssh_keys.yml
(+8 files in other folders)
