[tool.poetry]
name = "ansible"
version = "0.1.0"
description = ""
authors = ["Pierre 'rootmout' Kelbert <rootmout@cri.epita.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
hvac = "^0.11.2"
jmespath = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
