[tool.poetry]
name = "ansible-venv"
version = "0.1.0"
description = ""
authors = ["Pierre 'rootmout' Kelbert <rootmout@cri.epita.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
hvac = "^1.0.0"
jmespath = "^1.0.0"
netaddr = "^0.8.0"
napalm = "^4.1.0"
napalm-vyos = { git="https://github.com/rootmout/napalm-vyos", branch="develop" }
ansible = "^8.6.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
